--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -40,7 +40,7 @@ body {
 
 /* Custom scrollbar */
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 5px;
 }
 
 ::-webkit-scrollbar-track {
@@ -53,4 +53,17 @@ body {
 
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
+}
+
+/* Buttons */
+.calculator-buttons {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+    padding: 10px;
+}
+
+.equal-sign {
+    grid-column: -2;
+    grid-row: 2 / span 4;
 }
