--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -11,6 +11,10 @@ body {
     background: linear-gradient(to bottom, #fffc00, #ffffff);
 }
 
+header {
+    
+}
+
 .calculator {
     background: white;
     width: 400px;
